# chat-support

./: Dockerfile  README.md  gunicorn.conf  pyproject.toml  requirements.txt
bedrock_vector_store/: Dockerfile  requirements.txt  vector_store.py
chat_support/: app.py  bedrock_chatbot.py  bedrock_embedder.py  config.py  config.yaml
chat_support/models/: chat.py  models.py
chat_support/routers/: chat.py
chat_support/utils/: dependency.py
scripts/: run.sh
